# mlwiz

./: .coveragerc  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Example Qualitative Analysis and Plots.ipynb  LICENSE  README.md  Test Dataset and DataProvider.ipynb  cluster_slurm_example.sh  pyproject.toml  shared-view.mlwiz
.github/: dependabot.yml  requirements.txt
.github/ISSUE_TEMPLATE/: feature_request.yaml
.github/workflows/: codeql.yml  docs.yml  interrogate-docstring.yaml  python-publish-package.yml  python-publish.yml  python-test-and-coverage.yml
docs/: conf.py  index.rst  intro.rst  requirements.txt  tutorial.rst
docs/source/: mlwiz.data.rst  mlwiz.evaluation.rst  mlwiz.experiment.rst  mlwiz.log.rst  mlwiz.model.rst  mlwiz.rst  mlwiz.training.callback.rst  modules.rst  pydgn.data.rst  pydgn.experiment.rst  pydgn.model.dgn.rst  pydgn.model.readout.rst  pydgn.model.rst  pydgn.training.event.rst  pydgn.training.rst
examples/: Example Qualitative Analysis and Plots.ipynb  Test Latex Table Conversion.ipynb  toy_ddp_training_smoke.py
examples/DATA_CONFIGS/: config_Cora.yml  config_DummyIterableDataset.yml  config_MNIST.yml  config_MNISTTemporal.yml  config_MNIST_manysplits.yml  config_NCI1.yml  config_ToyIterableDataset.yml  template_data.yml
examples/MODEL_CONFIGS/: config_CNN.yml  config_DGN.yml  config_DGN_SingleGraph.yml  config_GRU.yml  config_LinkPredToyDGN.yml  config_MLP.yml  config_MLP_IterableDataset.yml  config_MLP_bayes.yml  config_MLP_ddp.yml  config_MLP_random.yml  config_SupToyDGN.yml  config_SupToyDGN_RandomSearch.yml  config_SupToyDGN_ToyIterableDataset.yml  template_bayes_search.yml  template_grid_search.yml  template_random_search.yml
examples/MODEL_CONFIGS/data_loading/: torch.yml
examples/MODEL_CONFIGS/dataset/: cora.yml  mnist.yml  mnist_inner5.yml  mnist_temporal.yml  nci1.yml  toy_iterable.yml
mlwiz/: __init__.py  build_dataset.py  config_duplicator.py  config_loader.py  exceptions.py  launch_experiment.py  static.py  util.py
mlwiz/data/: __init__.py  dataset.py  provider.py  sampler.py  splitter.py  util.py
mlwiz/evaluation/: __init__.py  bayesian_search.py  config.py  evaluator.py  grid.py  random_search.py  util.py
mlwiz/experiment/: __init__.py  experiment.py  semi_supervised_task.py  supervised_task.py
mlwiz/log/: __init__.py  logger.py
mlwiz/model/: __init__.py  graph.py  interface.py  timeseries.py  vector.py
mlwiz/training/: __init__.py  distributed.py  engine.py  profiler.py  util.py
mlwiz/ui/: __init__.py  dashboard.py  dashboard_snapshot.py  progress_manager.py
tests/: Test Dataset and DataProvider.ipynb  __init__.py  conftest.py  test_cli_scripts.py  test_config_loader.py
tests/data/: __init__.py  test_data_provider.py  test_data_provider_additional.py  test_data_splitter.py  test_data_splitter_additional.py
tests/evaluation/: __init__.py  grid_search.yml  random_search.yml  test_bayesian_search.py  test_evaluator.py  test_evaluator_helpers.py  test_evaluator_non_debug.py  test_experiment_batch_size.py  test_experiment_sync_batchnorm.py  test_search_method.py  test_util.py
tests/integration/: __init__.py  fake_dataset.py  graph_class_dataset_config.yml  semi_sup_exp_config.yml  sup_exp_config.yml  test_full_experiment.py
tests/training/: __init__.py  test_early_stopping.py  test_engine_helpers.py  test_engine_sampler_permutation.py  test_metric.py  test_mixed_precision.py  test_model_graph_input_spec.py  test_optimizer_callback.py  test_plotter.py  test_scheduler_callback.py
tests/ui/: __init__.py  test_dashboard.py
(+365 files in other folders)
