[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlwiz"
version = "0.0.1"
description = "Machine Learning Research Wizard"
authors = [ { name="Federico Errica", email="f.errica@protonmail.com" } ]
readme = "README.md"
keywords = ["machine-learning", "deep-learning", "experiments", "research", "evaluation-framework"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

dependencies = [
    "PyYAML>=5.4",
    "tqdm>=4.66.1",
    "Requests>=2.31.0",
    "scikit_learn>=1.3.0",
    "tensorboard>=2.11.0",
    "tqdm>=4.47.0",
    "ray>=2.6.0",
    "torchvision>=0.18.1",
    "torchaudio>=2.3.1",
    "torch>=2.3.1",
    "torch-geometric>=2.3.0",
]


[project.urls]
"Homepage" = "https://mlwiz.readthedocs.io/en/latest/"


[project.scripts]
mlwiz-data = "mlwiz.build_dataset:main"
mlwiz-exp = "mlwiz.launch_experiment:main"