[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlwiz"
version = "1.1.0"
description = "Machine Learning Research Wizard"
authors = [ { name="Federico Errica", email="f.errica@protonmail.com" } ]
readme = "README.md"
keywords = ["machine-learning", "deep-learning", "experiments", "research", "evaluation-framework"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.10"

dependencies = [
    "PyYAML>=5.4",
    "tqdm>=4.66.1",
    "dill>=0.3.8",
    "Requests>=2.31.0",
    "scikit_learn>=1.3.0",
    "tensorboard>=2.11.0",
    "tqdm>=4.47.0",
    "ray>=2.6.0",
    "torchvision>=0.18.1",
    "torch>=2.3.1",
    "torch-geometric>=2.3.0,<=2.4.0", # todo remove upper bound as soon as the bug has been fixed (hopefully in 2.6.0) https://github.com/pyg-team/pytorch_geometric/issues/9521
]


[project.urls]
"Homepage" = "https://mlwiz.readthedocs.io/en/latest/"


[project.scripts]
mlwiz-data = "mlwiz.build_dataset:main"
mlwiz-exp = "mlwiz.launch_experiment:main"